# neuro-rl

./: .gitignore  README.md
blog/: neuro_rl_post.md
colab/: colab_eval.py  colab_train.py
hf_space/: Dockerfile  README.md  __init__.py  client.py  models.py  pyproject.toml  reward.py
hf_space/server/: __init__.py  app.py  neuro_rl_env_environment.py  requirements.txt  signal.py
neuro_rl_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  reward.py
neuro_rl_env/server/: Dockerfile  __init__.py  app.py  environment.py  neuro_rl_env_environment.py  signal.py
neuro_rl_env/tests/: test_environment.py  test_reward.py  test_signal.py
notebooks/: train_grpo.ipynb  train_grpo.py  train_grpo_colab.ipynb  train_grpo_kaggle.ipynb
outputs/: baseline_drift_resistance.json  baseline_metrics.json  drift_resistance.json  trained_metrics.json
presentation/: slides.md  video_shotlist.md
scripts/: eval_baseline.py  eval_trained.py  heldout_scenarios.py  live_demo.py  local_smoke.py  make_plots.py
