[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-neuro_rl_env"
version = "0.1.0"
description = "Neuro RL Env environment"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "neuro_rl_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["neuro_rl_env", "neuro_rl_env.server"]
package-dir = { "neuro_rl_env" = ".", "neuro_rl_env.server" = "server" }
